--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.3",
+    "react-rnd": "^10.5.2",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
