--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
-    "konva": "^9.3.20",
+    "fabric": "^6.6.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-konva": "^19.0.3",
     "react-rnd": "^10.5.2",
     "tailwindcss": "^4.1.5"
   },
@@ -27,6 +26,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-plugin-commonjs": "^0.10.4"
   }
 }
